# tddcpp-301_exercises

./: .gitignore  .gitmodules  README.md  gcovr-CMake.md
.github/workflows/: build-host.yaml
solutions/: README.md
solutions/.devcontainer/: devcontainer.json
solutions/exercise1/: CMakeLists.txt
solutions/exercise1/.devcontainer/: Dockerfile
solutions/exercise1/src/: Buffer.cpp  Buffer.h  CMakeLists.txt  TemplateBuffer.h
solutions/exercise1/tests/: CMakeLists.txt  buffer_tests.cpp  template_buffer_tests.cpp
solutions/exercise2_gtest/: README.md  rebuild.sh
solutions/exercise2_gtest/.devcontainer/: devcontainer.json
solutions/exercise2_gtest/inc/: ds1820.h
solutions/exercise2_gtest/src/: temperature_sensor.cpp
solutions/exercise2_gtest/tests/: CMakeLists.txt  Display_stub.cpp  ds1820_stub.cpp  test_temperature_sensor.cpp
solutions/exercise4_gmock/.devcontainer/: devcontainer.json
solutions/exercise4_gmock/inc/: IDisplay.h
solutions/exercise4_gmock/src/: temperature_sensor.cpp  temperature_sensor.h
solutions/exercise4_gmock/tests/: CMakeLists.txt  ds1820_stub.cpp  test_temperature_sensor.cpp
solutions/exercise5_gmock/: CMakeLists.txt  coverage.sh
solutions/exercise5_gmock/.devcontainer/: Dockerfile
solutions/exercise5_gmock/inc/: ISensor.h  Sensor_Adaptor.h  ds1820.h
solutions/exercise5_gmock/src/: temperature_sensor.cpp  temperature_sensor.h
solutions/exercise5_gmock/tests/: CMakeLists.txt  Sensor_adaptor.cpp  test_temperature_sensor.cpp  test_temperature_sensor_mocks.cpp
solutions/exercise5_gmock_template_example/: CMakeLists.txt  coverage.sh  gcovr.cfg
solutions/exercise5_gmock_template_example/inc/: IDisplay.h  Sensor_Adaptor.h
solutions/exercise5_gmock_template_example/src/: temperature_sensor.h
solutions/exercise5_gmock_template_example/tests/: CMakeLists.txt  Sensor_adaptor.cpp  ds1820_stub.cpp  test_temperature_sensor.cpp  test_temperature_sensor_mocks.cpp
solutions/exercise6_doctest/: CMakeLists.txt  README.md  meson.build
solutions/exercise6_doctest/.devcontainer/: devcontainer.json
solutions/exercise6_doctest/src/: Closed.cpp  Closing.cpp  GarageDoorOpener.cpp  Open.cpp  Open.h  Opening.cpp  Opening.h  StateMachine.cpp  StateMachine.h  StoppedClosing.cpp  StoppedOpening.cpp  files.txt
solutions/exercise6_doctest/tests/: CMakeLists.txt  doctest.h  test_gdo.cpp
templates/.devcontainer/: devcontainer.json
templates/exercise1_gtest/: README.md
templates/exercise1_gtest/.devcontainer/: Dockerfile  devcontainer.json
templates/exercise1_gtest/src/: Buffer.cpp  Buffer.h
templates/exercise1_gtest/tests/: CMakeLists.txt  buffer_tests.cpp
templates/exercise2_gtest/: CMakeLists.txt  README.md
templates/exercise2_gtest/.devcontainer/: Dockerfile  devcontainer.json
templates/exercise2_gtest/inc/: IDisplay.h  ds1820.h
templates/exercise2_gtest/src/: CODE.md  temperature_sensor.cpp  temperature_sensor.h
templates/exercise2_gtest/tests/: CMakeLists.txt  Display_stub.cpp  Display_stub.h  ds1820_stub.cpp  test_main.cpp  test_temperature_sensor.cpp
templates/exercise4_gmock/: README.md
templates/exercise4_gmock/.devcontainer/: Dockerfile  devcontainer.json
templates/exercise4_gmock/src/: temperature_sensor.cpp  temperature_sensor.h
templates/exercise4_gmock/tests/: CMakeLists.txt  ds1820_stub.cpp  test_temperature_sensor.cpp
templates/exercise5_doctest/.devcontainer/: Dockerfile
templates/exercise5_doctest/src/: GarageDoorOpener.cpp  StoppedClosing.cpp  StoppedOpening.cpp
templates/exercise5_doctest/tests/: CMakeLists.txt
templates/exercise6_doctest/: CMakeLists.txt
templates/exercise6_doctest/.devcontainer/: Dockerfile
templates/exercise6_doctest/src/: Closed.cpp  Closed.h  Closing.cpp  Closing.h  GarageDoorOpener.h  Open.cpp  Opening.cpp  StateMachine.cpp  StateMachine.h  StoppedClosing.h  StoppedOpening.h
templates/exercise6_doctest/tests/: CMakeLists.txt  test_gdo.cpp
